--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 				<img src="images/logo.png" alt="logo" id="logo">
 				<nav>
 					<ul>
-						<li class="active-li">Home</li>
-						<li>Work</li>
-						<li>About</li>
-						<li>Blog</li>
-						<li>Contact</li>
-						<li>Buy theme</li>
+						<li><a href="#" class="active">Home</a></li>
+						<li><a href="#">Work</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Buy theme</a></li>
 					</ul>
 				</nav>
 			</div>
 
 			<div class="header-main">
-				<h2>new branding agency</h2>
+				<p>new branding agency</p>
 				<h1>We are about to change the way <br><span>you publish on web</span></h1>
 			</div>
 
-			<div id="header-footer">
-				<a href="#"><span></span></a>
-			</div>
+			<div id="header-footer" class="demo"><a href="#"><span></span></a></div>
+
 		</div>
 	</header>
 </body>
