--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header>
+		<div id="header-bg"></div>
 		<div class="flex-container">
 			<div class="header-top">
 				<img src="images/logo.png" alt="logo" id="logo">
