--- a/index.html
+++ b/index.html
@@ -8,31 +8,107 @@
 	<title>Snow</title>
 </head>
 <body>
-	<header>
-		<div id="header-bg"></div>
-		<div class="flex-container">
-			<div class="header-top">
-				<img src="images/logo.png" alt="logo" id="logo">
-				<nav>
-					<ul>
-						<li><a href="#" class="active">Home</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Buy theme</a></li>
-					</ul>
-				</nav>
-			</div>
-
-			<div class="header-main">
-				<p>new branding agency</p>
-				<h1>We are about to change the way <br><span>you publish on web</span></h1>
-			</div>
-
-			<div id="header-footer" class="demo"><a href="#"><span></span></a></div>
-
+<!-- Header -->
+<header>
+	<div id="header-bg"></div>
+	<div class="flex-container">
+		<div class="header-top">
+			<img src="images/logo.png" alt="logo" id="logo">
+			<nav>
+				<ul>
+					<li><a href="#" class="active">Home</a></li>
+					<li><a href="#">Work</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Buy theme</a></li>
+				</ul>
+			</nav>
 		</div>
-	</header>
+
+		<div class="header-main">
+			<p>new branding agency</p>
+			<h1>We are about to change the way <br><span>you publish on web</span></h1>
+		</div>
+
+		<div id="header-footer" class="demo"><a href="#"><span></span></a></div>
+
+	</div>
+</header>
+<!-- Header End -->
+
+<!-- Main -->
+<main>
+	<!-- About -->
+	<div id="about" class="flex-container">
+		<h2>About Our Agency</h2>
+		<p>We are a new design studio based in USA. We have over 20 years of combined experience, and know
+			a thing or two about designing websites and mobile apps. Clever use of technology
+			and lean processes enable us to work faster and smarter.
+		</p>
+		<img src="images/signature.png" alt="signature" id="signature">
+	</div>
+	<!-- About End -->
+
+	<!-- Numbers -->
+	<div id="numbers">
+		<div class="flex-container">
+			<div class="number">
+				<img src="images/pe-7s-portfolio.png" alt="portfolio">
+				<div>
+				<p class="digit">548</p>
+				<p class="uppercased">projects completed</p>
+				</div>
+			</div>
+			<div class="number"><img src="images/pe-7s-clock.png" alt="clock">
+				<div>
+				<p class="digit">1465</p>
+				<p class="uppercased">WORKING HOURS</p>
+				</div>
+			</div>
+			<div class="number"><img src="images/pe-7s-star.png" alt="star">
+				<div>
+				<p class="digit">612</p>
+				<p class="uppercased">POSITIVE FEEDBACKS</p>
+				</div>
+			</div>
+			<div class="number"><img src="images/pe-7s-like.png" alt="like">
+				<div>
+				<p class="digit">735</p>
+				<p class="uppercased">HAPPY CLIENTS</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Numbers End -->
+
+	<!-- Best Projects -->
+	<div id="best-projects">
+		<div class="flex-container">
+			<h2>Best Projects</h2>
+			<p>Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. Etiam,pellentesque faucibus.
+				Vestibulum gravida volutpat ipsum non ultrices.</p>
+		<div id="projects">
+			<div class="project">
+				<div class="project-1"></div>
+				<div class="project-2"></div>
+				<div class="project-3"></div>
+			</div>
+			<div class="project">
+				<div class="project-4"></div>
+				<div class="project-5"></div>
+				<div class="project-6"></div>
+			</div>
+			<div class="project">
+				<div class="project-7"></div>
+				<div class="project-8"></div>
+				<div class="project-9"></div>
+			</div>
+		</div>
+		</div>
+	</div>
+	<!-- Best Projects End -->
+</main>
+<!-- Main End -->
 </body>
 </html>
