--- a/index.html
+++ b/index.html
@@ -88,23 +88,47 @@
 			<h2>Best Projects</h2>
 			<p>Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. Etiam,pellentesque faucibus.
 				Vestibulum gravida volutpat ipsum non ultrices.</p>
-		<div id="projects">
-			<div class="project">
-				<div class="project-1"></div>
-				<div class="project-2"></div>
-				<div class="project-3"></div>
+
+			<!--/* Flex Masonry */-->
+			<div class="flexbox">
+				<div class="item">
+					<img src="images/project-1.jpg" />
+					<p class="title">3rd item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-2.jpg" />
+					<p class="title">3rd item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-3.jpg" />
+					<p class="title">3rd item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-4.jpg" />
+					<p class="title">4th item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-5.jpg" />
+					<p class="title">5th item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-6.jpg" />
+					<p class="title">6th item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-7.jpg" />
+					<p class="title">7th item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-8.jpg" />
+					<p class="title">8th item</p>
+				</div>
+				<div class="item">
+					<img src="images/project-9.jpg" />
+					<p class="title">9th item</p>
+				</div>
 			</div>
-			<div class="project">
-				<div class="project-4"></div>
-				<div class="project-5"></div>
-				<div class="project-6"></div>
-			</div>
-			<div class="project">
-				<div class="project-7"></div>
-				<div class="project-8"></div>
-				<div class="project-9"></div>
-			</div>
-		</div>
+
 		</div>
 	</div>
 	<!-- Best Projects End -->
