--- a/index.html
+++ b/index.html
@@ -93,38 +93,38 @@
 			<div class="flexbox">
 				<div class="item">
 					<img src="images/project-1.jpg" />
-					<p class="title">3rd item</p>
+					<p class="title">1st item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-2.jpg" />
-					<p class="title">3rd item</p>
+					<img src="images/project-1.jpg" />
+					<p class="title">2nd item</p>
 				</div>
 				<div class="item">
 					<img src="images/project-3.jpg" />
 					<p class="title">3rd item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-4.jpg" />
+					<img src="images/project-3.jpg" />
 					<p class="title">4th item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-5.jpg" />
+					<img src="images/project-1.jpg" />
 					<p class="title">5th item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-6.jpg" />
+					<img src="images/project-1.jpg" />
 					<p class="title">6th item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-7.jpg" />
+					<img src="images/project-1.jpg" />
 					<p class="title">7th item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-8.jpg" />
+					<img src="images/project-3.jpg" />
 					<p class="title">8th item</p>
 				</div>
 				<div class="item">
-					<img src="images/project-9.jpg" />
+					<img src="images/project-1.jpg" />
 					<p class="title">9th item</p>
 				</div>
 			</div>
