--- a/index.html
+++ b/index.html
@@ -1,138 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Snow</title>
 </head>
+
 <body>
-<!-- Header -->
-<header>
-	<div id="header-bg"></div>
-	<div class="flex-container">
-		<div class="header-top">
-			<img src="images/logo.png" alt="logo" id="logo">
-			<nav>
-				<ul>
-					<li><a href="#" class="active">Home</a></li>
-					<li><a href="#">Work</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Buy theme</a></li>
-				</ul>
-			</nav>
-		</div>
-
-		<div class="header-main">
-			<p>new branding agency</p>
-			<h1>We are about to change the way <br><span>you publish on web</span></h1>
-		</div>
-
-		<div id="header-footer" class="demo"><a href="#"><span></span></a></div>
-
-	</div>
-</header>
-<!-- Header End -->
-
-<!-- Main -->
-<main>
-	<!-- About -->
-	<div id="about" class="flex-container">
-		<h2>About Our Agency</h2>
-		<p>We are a new design studio based in USA. We have over 20 years of combined experience, and know
-			a thing or two about designing websites and mobile apps. Clever use of technology
-			and lean processes enable us to work faster and smarter.
-		</p>
-		<img src="images/signature.png" alt="signature" id="signature">
-	</div>
-	<!-- About End -->
-
-	<!-- Numbers -->
-	<div id="numbers">
+	<!-- Header -->
+	<header>
+		<div id="header-bg"></div>
 		<div class="flex-container">
-			<div class="number">
-				<img src="images/pe-7s-portfolio.png" alt="portfolio">
-				<div>
-				<p class="digit">548</p>
-				<p class="uppercased">projects completed</p>
-				</div>
+			<div class="header-top">
+				<img src="images/logo.png" alt="logo" id="logo">
+				<nav>
+					<ul>
+						<li><a href="#" class="active">Home</a></li>
+						<li><a href="#">Work</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Buy theme</a></li>
+					</ul>
+				</nav>
 			</div>
-			<div class="number"><img src="images/pe-7s-clock.png" alt="clock">
-				<div>
-				<p class="digit">1465</p>
-				<p class="uppercased">WORKING HOURS</p>
-				</div>
+			<div class="header-main">
+				<p>new branding agency</p>
+				<h1>We are about to change the way <br><span>you publish on web</span></h1>
 			</div>
-			<div class="number"><img src="images/pe-7s-star.png" alt="star">
-				<div>
-				<p class="digit">612</p>
-				<p class="uppercased">POSITIVE FEEDBACKS</p>
+			<div id="header-footer" class="demo"><a href="#"><span></span></a></div>
+		</div>
+	</header>
+	<!-- Header End -->
+	<!-- Main -->
+	<main>
+		<!-- About -->
+		<div id="about" class="flex-container">
+			<h2>About Our Agency</h2>
+			<p>We are a new design studio based in USA. We have over 20 years of combined experience, and know
+				a thing or two about designing websites and mobile apps. Clever use of technology
+				and lean processes enable us to work faster and smarter.
+			</p>
+			<img src="images/signature.png" alt="signature" id="signature">
+		</div>
+		<!-- About End -->
+		<!-- Numbers -->
+		<div id="numbers">
+			<div class="flex-container">
+				<div class="number">
+					<img src="images/pe-7s-portfolio.png" alt="portfolio">
+					<div>
+						<p class="digit">548</p>
+						<p class="uppercased">projects completed</p>
+					</div>
 				</div>
-			</div>
-			<div class="number"><img src="images/pe-7s-like.png" alt="like">
-				<div>
-				<p class="digit">735</p>
-				<p class="uppercased">HAPPY CLIENTS</p>
+				<div class="number"><img src="images/pe-7s-clock.png" alt="clock">
+					<div>
+						<p class="digit">1465</p>
+						<p class="uppercased">WORKING HOURS</p>
+					</div>
+				</div>
+				<div class="number"><img src="images/pe-7s-star.png" alt="star">
+					<div>
+						<p class="digit">612</p>
+						<p class="uppercased">POSITIVE FEEDBACKS</p>
+					</div>
+				</div>
+				<div class="number"><img src="images/pe-7s-like.png" alt="like">
+					<div>
+						<p class="digit">735</p>
+						<p class="uppercased">HAPPY CLIENTS</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- Numbers End -->
-
-	<!-- Best Projects -->
-	<div id="best-projects">
-		<div class="flex-container">
-			<h2>Best Projects</h2>
-			<p>Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. Etiam,pellentesque faucibus.
+		<!-- Numbers End -->
+		<!-- Best Projects -->
+		<div id="best-projects">
+			<div class="flex-container">
+				<h2>Best Projects</h2>
+				<p>Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. Etiam,pellentesque faucibus.
 				Vestibulum gravida volutpat ipsum non ultrices.</p>
-
-			<!--/* Flex Masonry */-->
-			<div class="flexbox">
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">1st item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">2nd item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-3.jpg" />
-					<p class="title">3rd item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-3.jpg" />
-					<p class="title">4th item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">5th item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">6th item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">7th item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-3.jpg" />
-					<p class="title">8th item</p>
-				</div>
-				<div class="item">
-					<img src="images/project-1.jpg" />
-					<p class="title">9th item</p>
+				<!--/* Flex Masonry */-->
+				<div class="flexbox">
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">1st item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">2nd item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-3.jpg" />
+						<p class="title">3rd item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-3.jpg" />
+						<p class="title">4th item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">5th item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">6th item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">7th item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-3.jpg" />
+						<p class="title">8th item</p>
+					</div>
+					<div class="item">
+						<img src="images/project-1.jpg" />
+						<p class="title">9th item</p>
+					</div>
 				</div>
 			</div>
-
 		</div>
-	</div>
-	<!-- Best Projects End -->
-</main>
-<!-- Main End -->
+		<!-- Best Projects End -->
+		<!-- Testimonials -->
+		<div id="testimonials">
+			<div class="flex-container">
+				<div class="owl-carousel owl-theme owl-loaded">
+					<div class="owl-stage-outer">
+						<div class="owl-stage">
+							<div class="owl-item">
+								<p><q>Outstanding job and exceeded all expectations. It was a pleasure
+									to work with them on a sizable first project and am looking
+								forward to start the next one asap.</q></p>
+								<p class="uppercased">Michael Hopkins</p>
+							</div>
+							<div class="owl-item">
+								<p><q>I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.</q></p>
+								<p class="uppercased">Marilyn Monroe</p>
+							</div>
+							<div class="owl-item">
+								<p><q>Don’t walk in front of me… I may not follow
+									Don’t walk behind me… I may not lead
+								Walk beside me… just be my friend</q></p>
+								<p class="uppercased">Albert Camus</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="owl-dots">
+					<div class="owl-dot active"><span></span></div>
+					<div class="owl-dot"><span></span></div>
+					<div class="owl-dot"><span></span></div>
+				</div>
+			</div>
+		</div>
+		<!-- Testimonials End -->
+		<!-- Owl Carousel -->
+		<script src="js/jquery.min.js" type="text/javascript"></script>
+		<script src="js/owl.carousel.min.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			$('.owl-carousel').owlCarousel({
+				loop: true,
+				margin: 10,
+				// autoplay: true,
+				dotsEach: true,
+				autoplayHoverPause: true,
+				responsiveClass: true,
+				responsive: {
+					0: {
+						items: 1,
+					},
+					600: {
+						items: 1,
+					},
+					1000: {
+						items: 1,
+						loop: true
+					}
+				}
+			})
+		</script>
+	</main>
+	<!-- Main End -->
 </body>
+
 </html>
