--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<!-- Testimonials -->
 		<div id="testimonials">
 			<div class="flex-container">
-				<div class="owl-carousel owl-theme owl-loaded">
+				<div id="testimonials-carousel" class="owl-carousel owl-theme owl-loaded">
 					<div class="owl-stage-outer">
 						<div class="owl-stage">
 							<div class="owl-item">
@@ -162,11 +162,40 @@
 			</div>
 		</div>
 		<!-- Testimonials End -->
+		<!-- Clients -->
+		<div id="clients">
+			<div class="flex-container">
+				<div id="clients-carousel" class="owl-carousel owl-theme owl-loaded">
+					<div class="owl-stage-outer">
+						<div class="owl-stage">
+							<div class="owl-item">
+								<img src="images/logo-1.png">
+							</div>
+							<div class="owl-item">
+								<img src="images/logo-2.png">
+							</div>
+							<div class="owl-item">
+								<img src="images/logo-3.png">
+							</div>
+							<div class="owl-item">
+								<img src="images/logo-4.png">
+							</div>
+							<div class="owl-item">
+								<img src="images/logo-1.png">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Clients End-->
+
+
 		<!-- Owl Carousel -->
 		<script src="js/jquery.min.js" type="text/javascript"></script>
 		<script src="js/owl.carousel.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			$('.owl-carousel').owlCarousel({
+			$('#testimonials-carousel').owlCarousel({
 				loop: true,
 				margin: 10,
 				// autoplay: true,
@@ -181,8 +210,28 @@
 						items: 1,
 					},
 					1000: {
+						items: 1
+					}
+				}
+			})
+
+			$('#clients-carousel').owlCarousel({
+				loop: true,
+				margin: 10,
+				// autoplay: true,
+				autoplayHoverPause: true,
+				responsiveClass: true,
+				responsive: {
+					0: {
 						items: 1,
-						loop: true
+						dots: false,
+					},
+					600: {
+						items: 3,
+						dots: false,
+					},
+					1000: {
+						items: 5
 					}
 				}
 			})
